test/parsing/ferguson/formal-list-starts-comma.good
formal-list-starts-comma.chpl:1: error: syntax error near ','
